...
    static let sourceCommit =
        "f39474389831840366c23fd274208319802bf2a5"
    static let allowedHosts: Set<String> = [
        "academic.oup.com",
        "ashpublications.org",
        "creativecommons.org",
        "github.com",
        "glaad.org",
        "pflag.org",
        "pubmed.ncbi.nlm.nih.gov",
        "transcare.ucsf.edu",
        "wpath.org",
        "www.asha.org",
...
